Fixed horizontal scroll on pages

--- a/src/Styles/layout.less
+++ b/src/Styles/layout.less
@@ -6,11 +6,13 @@ body, html {
   margin: 0;
   padding: 0;
   height: 100%;
+  //overflow-x: hidden;
 }
 
 .wrapper {
     min-height: 100%;
     margin-bottom: -240px;
+    background-color: @footer-bg-color;
 }
 
 .wrapper:after {
@@ -41,7 +43,20 @@ body, html {
 .content-container {
   max-width: @content-width;
   margin: 0 auto;
+  padding: 0 15px;
   .u-clearfix;
+}
+
+@media (max-width: 1200px) {
+  .content-container {
+    max-width: 1170px;
+  }
+}
+
+@media (max-width: 992px) {
+  .content-container {
+    max-width: 970px;
+  }
 }
 
 .logo-container {
@@ -60,15 +75,23 @@ body, html {
   padding-bottom: 240px;
 }
 
+.hero-unit-wrapper {
+  background-image: url(/Images/hero-large.png);
+  position: relative;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50%;
+}
+
 .Hero-section {
   width: 100%;
   min-height: 900px;
   position: relative;
-  //z-index: -1;
-  background-image: url(/Images/hero-large.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+  background-image: radial-gradient( circle, #564f4c -12%, transparent 50% );
+  //
+  //background-repeat: no-repeat;
+  //background-size: cover;
+  //background-position: center;
 }
 
 .art-of-cakes-wrapper {
@@ -78,7 +101,6 @@ body, html {
   background-repeat: no-repeat;
   background-position: center;
   position: relative;
-  //z-index: -1;
   border-top: 10px solid white;
 
   &:before {
@@ -105,7 +127,7 @@ body, html {
 
 .carousel-wrapper {
   min-height: 760px;
-  background-image: url(/Images/placeholder.jpg);
+  background-image: url(/Images/cooking-time.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -123,11 +145,178 @@ body, html {
   z-index: -1;
 }
 
-.sandwich-wrapper {
+.recipes-wrapper {
   min-height: 760px;
   background: @footer-bg-color;
   //position: relative;
   z-index: -1;
+}
+
+.Recipes-header {
+  text-align: center;
+  position: relative;
+  padding-top: 100px;
+
+  &:before {
+    .u-general-pseudo-element-styles;
+    background-image: url(/Images/wind-weel.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    left: 50%;
+    margin-left: -70px;
+    top: 10%;
+    width: 145px;
+    height: 145px;
+    z-index: 0;
+  }
+  &__heading {
+    font-family: "AlegreyaBold", sans-serif;
+    font-size: 48px;
+    color: @footer-link-color;
+    line-height: 30px;
+    position: relative;
+  }
+
+  &__subheading {
+    font-family: "AlegreyaBold", sans-serif;
+    font-size: 14px;
+    color: #a47d5e;
+    text-transform: uppercase;
+    line-height: 30px;
+    letter-spacing: 1px;
+    position: relative;
+  }
+}
+
+@media (max-width: 375px) {
+  .Recipes-header {
+    padding-top: 65px;
+
+    &__heading,
+    &__subheading {
+      line-height: 48px;
+    }
+  }
+}
+
+.Contact-us-section {
+  background-color: @footer-bg-color;
+  min-height: 100%;
+  padding: 0 30px @header-height;
+}
+
+.parallax-window {
+  min-height: 400px;
+  background-image: url(/Images/apple-roses.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  position: relative;
+
+
+  &__heading {
+    font-family: AlegreyaBold,sans-serif;
+    font-size: 5em;
+    text-transform: uppercase;
+    padding: 160px 0 100px;
+    margin: 0;
+    color: #fff;
+    text-shadow: 1px 2px 5px #000;
+  }
+}
+
+.parallax-menu-window {
+  min-height: 400px;
+  background-image: url(/Images/menu.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  position: relative;
+
+
+  &__heading {
+    font-family: AlegreyaBold,sans-serif;
+    font-size: 4em;
+    text-transform: uppercase;
+    margin: 0;
+    padding: 160px 0 100px;
+    color: #fff;
+    text-shadow: 1px 2px 5px #000;
+  }
+}
+
+.parallax-price-window {
+  min-height: 400px;
+  background-image: url(/Images/slideshowImage_715.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  position: relative;
+}
+
+fieldset {
+  margin-top: 40px;
+}
+
+legend {
+  border-bottom: none;
+  font-family: "AlegreyaRegular", sans-serif;
+  font-size: 35px;
+  color: @recipe-heading-color;
+}
+
+.map-container iframe{
+  pointer-events: none;
+  position: relative;
+}
+
+.map-container iframe.clicked {
+  pointer-events: auto;
+}
+
+.menu-wrapper {
+  background-image: url(/Images/img_texture.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+
+}
+.category-tile {
+  position: relative;
+  border: 2px solid #fff;
+  overflow: hidden;
+  width: 300px;
+  height: 300px;
+  margin: 0 auto 40px;
+}
+.category-tile span {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  text-align: center;
+  font-size: 1.2em;
+  text-transform: uppercase;
+  background-color: #000;
+  color: #fff;
+  opacity: .8;
+}
+.category-tile:hover {
+  box-shadow: 0 1px 5px 1px #cccccc;
+}
+
+#menu-categories-title,
+#menu-categories-title2 {
+  font-family: "ScriptinaRegular", sans-serif;
+  color: @recipe-heading-color;
+  font-size: 45px;
+  padding-bottom: 30px;
+}
+#menu-categories-title + div,
+#menu-categories-title2 + div {
+  margin-bottom: 50px;
+  font-family: "ProximaNovaRegular", sans-serif;
+  font-size: 18px;
 }
 
 .footer {
@@ -138,8 +327,12 @@ body, html {
   clear: both;
 }
 
+@media (max-width: 992px) {
+  .recipes-content {
+    padding-bottom: 100px;
 
-
+  }
+}
 
 @media (max-width: 850px) {
   .logo-container {
@@ -152,6 +345,14 @@ body, html {
 }
 
 @media (max-width: 767px) {
+  .header {
+    background: rgba(72,72,68, .9);
+  }
+
+  .scrolled {
+    background: rgb(72,72,68);
+  }
+
   .logo-container {
     width: 30%;
   }
@@ -161,12 +362,30 @@ body, html {
   }
 }
 
-//@media (max-width: 320px) {
-//  .logo-container {
-//    width: 30%;
-//  }
-//
-//  .nav-container {
-//    width: 70%;
-//  }
-//}
+.price-table {
+  margin-bottom: 30px;
+}
+
+
+
+#slider-prev {
+  display: inline-block;
+  width: 35px;
+  height: 35px;
+  //background: url(/Images/slide/interface-arrow_left.svg) no-repeat;
+  top: 50%;
+  position: absolute;
+  margin-top: -20px;
+}
+
+#slider-next {
+  display: inline-block;
+  width: 35px;
+  height: 35px;
+  //background: url(/Images/slide/interface-arrow_right.svg) no-repeat;
+  top: 50%;
+  right: 0;
+  position: absolute;
+  margin-top: -20px;
+}
+
